# NewBioDiVinE

./: Makefile.am  Makefile.am.global  README  README.md  ac_all_deps_of_cvs.m4  acinclude.m4  aclocal.m4  autogen  configure  configure.ac
cli/: Makefile.am  Makefile.in  cli.cpp
examples/: 2d_01.bio  bistab.ltl  bistable.bio  bistable.bio.prop.bio  calin_1.bio  demo_model.bio  enzyme_10complex.bio  enzyme_15complex.bio  enzyme_1complex.bio  enzyme_20complex.bio  enzyme_2complexes.bio  enzyme_5complex.bio  fg_prop.ltl  g_prop.ltl  linear.bio  signiff_example.bio  signiff_example_refined.bio  stable.ltl  test.bio  test_prop1.ltl  test_prop2.ltl  u1_prop.ltl  u_prop.ltl
examples/cardiac_cell/: CardiacCell.bio  CardiacCell.bio.prop1.bio  CardiacCell.bio.prop2.bio  CardiacCell.bio.prop3.bio  CardiacCell.bio.prop4.bio  CardiacCell.bio.prop5.bio  CardiacCell.bio.prop6.bio  CardiacCell.prop1.bio.owcty.trail  CardiacCell.prop2.bio.map.trail  CardiacCell.prop5.bio.trail  CardiacCell.prop6.bio.trail  CardiacCell1.ltl  CardiacCell2.ltl  CardiacCell3.ltl  CardiacCell4.ltl  CardiacCell5.ltl  CardiacCell6.ltl  origin_cardiac.bio  origin_cardiac.prop1.bio.ce_states  origin_cardiac_prop1.ltl  origin_cardiac_prop5.ltl
examples/oscillations/: bayramov_7.bio  bayramov_7.prop10.bio  oscillation_precond1.ltl  oscillation_precond2.ltl
examples/pepmc/: cycle1revisited.bio  cycle1revisited.ltl  pepmc_model.bio  pepmc_prop.ltl
examples/tcbb2010/: prop1.ltl  prop2.ltl  prop3.ltl  prop4.ltl  prop5.ltl  prop6.ltl  propDP.ltl  tcbb1.bio  tcbb1.bio.prop.bio  tcbb1.bio.prop1.bio  tcbb1.prop1.bio.trail
lib/: Makefile.am  Makefile.in
pepmc2/: .hg_archival.txt  .hgeol  .hgignore  .hgsub  .hgsubstate  Makefile.am  Makefile.old  README.md  barrier.hpp  bio_eq_parser.hpp  bio_parser.hpp  buchi_automaton.hpp  cas.hpp  lock_free_queue.hpp  main.cpp  make_cycle.py  model.hpp  paramset.hpp  semaphore.hpp  state_space.hpp  succ.hpp  sync_counter.hpp  sync_flag.hpp  transitional_state_space.hpp
src/: Makefile.am  Makefile.in  divine-int.hh  sevine.h
src/common/: array_of_abstract.hh  bit_string.hh  bitarray.cc  bitarray.hh  distr_reporter.cc  distr_reporter.hh  error.hh  hash_function.cc  hash_function.hh  inttostr.cc  inttostr.hh  logger.cc  logger.hh  sysinfo.cc  sysinfo.hh  types.hh
src/distributed/: distributed.cc  distributed.hh  message.cc  message.hh  network.cc  network.hh
src/storage/: compressor.cc  compressor.hh  explicit_storage.cc  explicit_storage.hh  huffman.cc
src/system/: explicit_system.hh  path.cc  path.hh  state.cc  system.hh
src/system/bio/: affine_atomic_propositions.cc  affine_atomic_propositions.hh  affine_explicit_system.cc  affine_explicit_system.hh  affine_property.cc  affine_property.hh  affine_system.cc  affine_system.hh
src/system/bio/data_model/: Entite.h  Model.h  Model.h~  Summember.h
src/system/bio/parser/: Parser.h  Parser.ih  Parserbase.h  parse.cc  parse.cc~  parser2  parser2~
src/system/bio/scanner/: Scanner.h  Scanner.ih  Scannerbase.h  lex.cc  scanner2
support/: Makefile.am  Makefile.in
support/etc/: Makefile.am  Makefile.in
support/etc/doxygen/: Makefile.am  Makefile.in  doxyfile.in
support/src/: Makefile.am  Makefile.in
support/src/debug/: Makefile.am  Makefile.in  backtrace.sh
support/src/makeutils/: Makefile.am  Makefile.in  ac_cxx_namespaces.m4  ac_ios_base.m4  ac_parameters.m4  acdivine.m4  acx_mpi.m4  ax_create_stdint_h.m4  make_documentation_dir.sh  make_documentation_index.sh  make_program_am.sh  make_script_am.sh  missing
tool/: Makefile.am  Makefile.in
tool/distr_map/: Makefile.am  Makefile.in  distr_map.README  distr_map.cc  distr_map.hh
tool/ltl2ba/: Makefile.am  Makefile.in  ltl.cc  ltl2ba.cc  ltl2buchi.cc  make_product  test.cc
tool/model_manipulation/: Makefile.am  Makefile.in  combine
tool/model_manipulation/.deps/: draw_automata.Po  dve2mcrl2.Po  dve2promela.Po  syntax.Po
tool/owcty/: Makefile.am  Makefile.in  owcty.cc
tool/owcty_reversed/: Makefile.am  Makefile.in  README  owcty_reversed.cc
tool/state_spaces/: Makefile.am  Makefile.in  draw_state_space  generator.cc  predot.cc
tool/utils/: Makefile.am  Makefile.in  plotlog
