include $(top_srcdir)/Makefile.am.global

nodist_pkginclude_HEADERS = divine-int.hh

nobase_pkginclude_HEADERS = sevine.h divine.h \
                         common/inttostr.hh \
                         common/error.hh \
                         common/types.hh \
                         common/array.hh \
                         common/array_of_abstract.hh \
                         common/bit_string.hh \
				 system/data.hh \
				 system/explicit_system.hh \
				 system/expression.hh \
				 system/path.hh \
				 system/process.hh \
				 system/state.hh \
				 system/system_abilities.hh \
				 system/system.hh \
				 system/system_trans.hh \
				 system/transition.hh \
                         storage/compressor.hh \
						 storage/huffman.cc \
						 storage/huffman.hh \
                         storage/explicit_storage.hh \
             common/sysinfo.hh \
             common/reporter.hh \
			 common/process_decomposition.hh \
			 common/hash_function.hh \
                         common/deb.hh \
                         distributed/message.hh \
                         distributed/network.hh \
                         distributed/distributed.hh \
                         common/distr_reporter.hh \
                         common/logger.hh \
                         common/deb.hh \
			 common/undeb.hh

